[package]
name = "ensip25"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords = ["ethereum", "ens", "ensip25", "erc8004", "ai-agents"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
alloy-primitives.workspace = true
thiserror.workspace = true

alloy = { workspace = true, optional = true }
alloy-ens = { workspace = true, optional = true }
erc8004 = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
provider = ["dep:alloy", "dep:alloy-ens"]
erc8004 = ["dep:erc8004", "provider"]
serde = ["dep:serde"]

[[example]]
name = "erc7930_encode"

[[example]]
name = "record_key"

[[example]]
name = "verify"
required-features = ["provider"]

[[example]]
name = "verify_erc8004"
required-features = ["erc8004"]

[lints]
workspace = true
